<resources>
    <string name="app_name">Ecommerce</string>
    <string name="app_slogan">Encuentra, descubre, compra ... todo lo que quieras</string>
    <string name="join_now">¡Únete ahora!</string>
    <string name="alreadyHave_account">¿Ya tienes una cuenta? Ingresa</string>
    <string name="enter_phone_number">Ingesa tu número de teléfono</string>
    <string name="enter_password">Ingresa la contraseña</string>
    <string name="remember_me">Recuérdame</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login">Ingresar</string>
    <string name="i_am_admin">Soy un administrador</string>
    <string name="i_am_not_admin">No soy un administrador</string>
    <string name="enter_name_lastname">Ingresa tu nombre y apellido</string>
    <string name="enter_email">Ingresa tu email</string>
    <string name="enter_address">Ingresa tu dirección postal</string>
    <string name="enter_a_password">Ingresa una contraseña</string>
    <string name="create_account">Crear una cuenta</string>
    <string name="must_input_name">Debes ingresar tu nombre y apellido</string>
    <string name="must_input_phone_number">Debes ingresar tu número de teléfono</string>
    <string name="must_input_email">Debes ingresar tu dirección de email</string>
    <string name="must_input_address">Debes ingresar tu dirección postal</string>
    <string name="must_input_password">Debes ingresar una contraseña</string>
    <string name="creating_account">Creando tu cuenta</string>
    <string name="please_wait_checking_credentials">Por favor, espera mientras verificamos las credenciales</string>
    <string name="account_already_exists">Una cuenta con ese número telefónico ya fue creada. Por favor ingresa otro número</string>
    <string name="account_successfully_created">¡Felicitaciones! La cuenta fue creada exitosamente</string>
    <string name="please_try_later">Error de conexión. Por favor intenta más tarde</string>
    <string name="must_input_your_password">Debes ingresar tu contraseña</string>
    <string name="login_user">Ingresando</string>
    <string name="account_does_not_exist">La cuenta con el número de teléfono ingresado no existe. Debes crear una cuenta.</string>
    <string name="wrong_password">La contraseña ingresada es incorrecta</string>
    <string name="enter_admin">Ingresar Administrador</string>
    <string name="add_new_product">Agregar nuevo producto</string>
    <string name="enter_product_name">Nombre del producto ...</string>
    <string name="enter_product_description">Descripción del producto ...</string>
    <string name="enter_product_price">Precio del producto ...</string>
    <string name="add_product">Agregar producto</string>
    <string name="must_input_product_name">Debes ingresar el nombre del producto</string>
    <string name="must_input_product_description">Debes ingresar la descripción del producto</string>
    <string name="must_input_product_price">Debes ingresar el precio del producto</string>
    <string name="must_input_choose_product_image">Debes elegir una imagen del producto</string>
    <string name="image_uploaded_succsessfully">La imagen fue guardada exitosamente</string>
    <string name="product_image_url_retrieved_succsessfully">Url de la imagen del producto obtenida existosamente</string>
    <string name="product_added_succsessfully">El producto fue agregado exitosamente</string>
    <string name="adding_product">Agregando producto</string>
    <string name="please_wait_adding_product">Por favor, espera mientras agregamos el nuevo producto</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Carrito</string>
    <string name="orders">Pedidos</string>
    <string name="categories">Categorías</string>
    <string name="settings">Ajustes</string>
    <string name="logout">Salir</string>
    <string name="home">Inicio</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="_close">Cerrar</string>
    <string name="_update">Actualizar</string>
    <string name="_update_image">Actualizar imagen de usuario</string>
    <string name="phone_number">Número de teléfono</string>
    <string name="full_name">Nombre completo</string>
    <string name="address">"Dirección "</string>
    <string name="email">Email</string>
    <string name="error_try_again">Ha ocurrido un error. Inténtalo otra vez</string>
    <string name="updating_profile">Actualizando perfil</string>
    <string name="please_wait_updating_profile">Por favor, espera mientras actualizamos la información de tu perfil</string>
    <string name="profile_info_updated_succsessfully">La información de tu cuenta ha sido actualizada exitosamente</string>
    <string name="image_not_selected">No has elegido una imagen</string>
</resources>