<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_close_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_close"
                    android:textColor="@color/white"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:id="@+id/txt_update_account_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_update"
                    android:textColor="@color/white"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_below="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settings_profile_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/profile"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>
            <!--            android:layout_below="@+id/app_bar_settings"-->


            <TextView
                android:id="@+id/txt_profile_image_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_update_image"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/settings_profile_image"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/et_settings_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_profile_image_change"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimary"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:layout_margin="15dp"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/et_settings_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_settings_phone_number"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimary"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:layout_margin="15dp"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/et_settings_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_settings_full_name"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimary"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:layout_margin="15dp"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/et_settings_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_settings_address"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimary"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_margin="15dp"
                android:padding="10dp"/>


        </RelativeLayout>



    </ScrollView>



</RelativeLayout>