<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <ImageView
            android:id="@+id/register_app_logo"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:src="@drawable/applogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/register_input_name_et"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_app_logo"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/inputs_design"
            android:padding="15dp"
            android:hint="@string/enter_name_lastname"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/register_phone_number_et"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_input_name_et"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/inputs_design"
            android:padding="15dp"
            android:hint="@string/enter_phone_number"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/register_email_et"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_phone_number_et"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/inputs_design"
            android:padding="15dp"
            android:hint="@string/enter_email"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/register_address_et"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_email_et"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/inputs_design"
            android:padding="15dp"
            android:hint="@string/enter_address"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/register_enter_password_et"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_address_et"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/inputs_design"
            android:padding="15dp"
            android:hint="@string/enter_a_password"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/register_btn"
            android:layout_below="@id/register_enter_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:background="@drawable/button"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="25dp"
            android:padding="20dp"
            android:textAllCaps="false"/>

    </RelativeLayout>





</ScrollView>

