<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/register_app_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_app_logo"
        android:layout_centerHorizontal="true"
        android:inputType="textMultiLine"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic"
        android:text="@string/app_slogan"
        android:gravity="center_horizontal" />
    <Button
        android:id="@+id/welcome_join_now_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alreadyHave_account"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:background="@drawable/button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="15dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/welcome_create_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_now"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:background="@drawable/button"
        android:layout_above="@+id/welcome_join_now_btn"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="15dp"
        android:textAllCaps="false"/>

</RelativeLayout>